--- a/StarredSeaMUON/StarredSeaMUON.csproj
+++ b/StarredSeaMUON/StarredSeaMUON.csproj
@@ -15,6 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="resources\ascii\title.ascii.txt" />
+    <None Remove="resources\commands\test.cmd.lua" />
     <None Remove="resources\web\favicon.ico" />
   </ItemGroup>
 
@@ -24,6 +26,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.8" />
+    <PackageReference Include="MoonSharp" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Server\Telnet\" />
   </ItemGroup>
 
 </Project>
