--- a/StarredSeaAssetDownloadServer/StarredSeaAssetDownloadServer.csproj
+++ b/StarredSeaAssetDownloadServer/StarredSeaAssetDownloadServer.csproj
@@ -13,4 +13,11 @@
     <Content Include="AssetDLServerIcon.ico" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
